  * Added jungle tree + sapling texture data from weekly 12w03a and 12w04a
  * (internal) update to LWJGL 2.8.3

Minecraft X-Ray 3.5.1 (2012.01.15)

  * "Other" option on world-opening dialog should work more than once
  * If the camera is moved out of range of valid chunks, the "-" key can
    be used to jump back into valid space.  There will also be a visual
    indication of when this is the case.

Minecraft X-Ray 3.5.0 (2011.11.18)

  * Dialog to change keybindings in-game, courtesy Eleazar Vega-Gonzalez
    and Saxon Parker.
  * The "O" key can now be used to open a new map without having to quit
    X-Ray and start over.
  * The "]" (right bracket) key can be used to change which block types
    are highlighted.
  * Added new Beta 1.9-pre6 block definition: Dragon Egg
  * Renamed ENDER_PORTAL and ENDER_PORTAL_FRAME to END_PORTAL and
    END_PORTAL_FRAME
  * Slime-spawn highlighting will only display in the Overworld
  * Slime-spawn highlighting will go up to y=40, as per Beta 1.9-pre5
  * Cleaned up snow rendering
  * Added a visual tint around the ore highlight toggle indicators,
    making them far easier to read in many circumstances.
  * Resolutions with less than 800px of horizontal resolution have been
    disabled.
  * (internal) update to LWJGL 2.8.2
  * (internal) removed quite a few unneeded LWJGL Jar files

Minecraft X-Ray 3.4.3 (2011.10.21)

  * Fixed a NullPointerException which occurs when xray.properties
    doesn't include STATE_HIGHLIGHT_ORES

Minecraft X-Ray 3.4.2 (2011.10.20)

  * Updated ore-highlighting toggle ("H" by default) to switch between
    old-style (white) and new-style (disco) highlighting, in addition to
    turning it off.
  * (internal) update to LWJGL 2.8.1

Minecraft X-Ray 3.4.1 (2011.10.15)

  * Updated Air Portal rendering to Beta 1.9-pre4
  * Added Ender Stone block from Beta 1.9-pre4
  * Set "The End" as a known dimension, for the level list
  * Rename AIR_PORTAL and AIR_PORTAL_FRAME to ENDER_PORTAL and